--- a/ShoppOnline/Pages/Products.razor
+++ b/ShoppOnline/Pages/Products.razor
@@ -1,8 +1,28 @@
 ﻿@page "/"
-@inherits ProductBase
+@inherits ProductsBase
 
-<h3>Products</h3>
+@if (Products == null)
+{
+	<h3>Loading Products...</h3>
+}
+else
+{ 
+	<h3 class="mb-5">Products</h3>
+	
+	var productCount = Products.Count();
 
-@code {
+	@if (productCount > 0)
+	{
+		@foreach (var prodGroup in GetGroupedProductsByCategory())
+			{
+				<h4>@GetCategoryName(prodGroup) </h4>
+
+				<div class="row mt-3">
+						<DisplayProducts Products = "@prodGroup.Take(4)" ></DisplayProducts>
+				</div>
+
+				<hr class="mb-3"/>
+			}	
+	}
 
 }
