--- a/ShoppOnline/Pages/ProductDetails.razor
+++ b/ShoppOnline/Pages/ProductDetails.razor
@@ -3,11 +3,12 @@
 
 @if (Product == null && ErrorMessage == null)
 {
-	<h3>Loading Products... </h3>
+    <DisplaySpinner/>
+
 }
 else if (ErrorMessage != null)
 {
-	<h3 class="text-danger">@ErrorMessage</h3>
+    <DisplayError ErrorMessage="@ErrorMessage"></DisplayError>    
 }
 else
 {
