--- a/ShoppOnline/Pages/ShoppingCart.razor
+++ b/ShoppOnline/Pages/ShoppingCart.razor
@@ -13,29 +13,50 @@ else if (ErrorMessage != null)
 else
 {
     <h3 class="mb-5">Shopping Cart</h3>
-    <div class="row mb-5">
-        <div class="col-md-9">
-            @foreach (var item in ShoppingCartItems )
-            {
-                <div class="row mb-4">
-                    <div class="col-md-4">
-                        <img src="@item.ProductImageURL" width="300" class="img-thumbnail">
+    @if (ShoppingCartItems.Count() > 0)
+    {
+        <div class="row mb-5">
+            <div class="col-md-9">
+                @foreach (var item in ShoppingCartItems)
+                {
+                    <div class="row mb-4">
+                        <div class="col-md-4">
+                            <img src="@item.ProductImageURL" width="300" class="img-thumbnail">
+                        </div>
+                        <div class="col-md-8">
+                            <h5>@item.ProductName</h5>
+                            <div class="mb-4">@item.ProductDescrition</div>
+                            <span>Price: <b>@item.Price.ToString("C")</b></span>
+                            <div>
+                                <button @onclick="(() => DeleteCartItem_Click(item.Id) )"
+                                        class="btn btn-danger sm">
+                                    <i class="bi bi-trash3-fill"></i>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 16 16">
+                                        <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5m-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5M4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06m6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528M8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5" />
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-md-8">
-                        <h5>@item.ProductName</h5>
-                        <div class="mb-4">@item.ProductDescrition</div>
-                        <span>Price: <b>@item.Price.ToString("C")</b></span>
-                    </div>
-                </div>
-            }
-        </div>
-        <div class="col-md-3">
-            <h5>Cart Summary</h5>
-            <div class="mt-2">
+                }
+            </div>
+            <div class="col-md-3">
+                <h5>Cart Summary</h5>
+                <div class="mt-2">
                 <a href="#" class="btn btn-success">
                     <span class="oi oi-credit-card"></span>&nbsp; Proceed to Checkout
                 </a>
+                </div>
             </div>
         </div>
-    </div>
-}
+        
+    }
+
+    else
+    {
+        <h4>There are currently no items in your shopping cart</h4>
+    }
+
+ }
+
+
